# INDmoney-Review-mcp-agent

./: .env.example  .gitignore  Dockerfile  README.md  auth-google-mcp.ps1  deployment.ps1  deployment.sh  docker-compose.yml  products.yaml  pyproject.toml  railway.json  render.yaml  start.ps1  start.sh
.github/workflows/: ci.yml
agent/: __init__.py  __main__.py  config.py  logging.py  models.py  orchestrator.py  storage.py  time_utils.py  windowing.py
agent/analysis/: __init__.py  clustering.py  embeddings.py  preprocess.py  service.py
agent/ingestion/: __init__.py  appstore.py  common.py  csv_upload.py  playstore.py  scrubber.py  service.py
agent/mcp/: __init__.py  docs_client.py  docs_service.py  gmail_client.py  gmail_service.py  server.py
agent/rendering/: __init__.py  docs.py  email.py  service.py
agent/summarization/: __init__.py  prompts.py  provider.py  quote_validation.py  service.py
docs/: architecture.md  deployment.md  implementationPlan.md  problemStatement.md  quickstart.md  runbook.md
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/components/: dashboard-shell.jsx  trigger-panel.jsx
phases/: README.md
phases/phase-0-foundations/: README.md
phases/phase-1-ingestion/: README.md
phases/phase-2-analysis/: README.md
phases/phase-3-summarization/: README.md
phases/phase-4-rendering/: README.md
phases/phase-5-docs-mcp/: README.md
phases/phase-6-gmail-mcp/: README.md
phases/phase-7-orchestration/: README.md
tests/fixtures/: appstore_reviews_page1.json  (+1 more)
(+39 files in other folders)
